Fix stylekits pro labels and overflow

--- a/assets/css/sk-main.css
+++ b/assets/css/sk-main.css
@@ -87,10 +87,6 @@
     z-index: 100;
 }
 
-#analogwp-templates .stylekit-list .pro {
-    position: inherit;
-}
-
 #analogwp-templates .templates-collection .actions,
 #analogwp-templates .templates-list .actions,
 #analogwp-templates .stylekit-list .preview,
